bluegreendeployment/blue/my-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: blue
spec:
  selector:
    app: myapp
    version: blue
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
